...

class ProductListVC: UIViewController {
    @IBOutlet var tableView: UITableView!
    var viewModel = ProductListViewModel()
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Products"
        viewModel.reloadData = {[weak self] isSuccess in
            DispatchQueue.main.async {
                self?.reloadData(success: isSuccess)
            }
        }
//        MBProgressHUD.showAdded(to: self.view, animated: true)
...
